--- a/package.json
+++ b/package.json
@@ -1,24 +1,39 @@
 {
-  "name": "api",
-  "version": "1.0.0",
-  "description": "Basic express interface to postgres",
-  "main": "server.js",
+  "name": "playpen-rect",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "express": "^4.16.4",
-    "pg": "^7.11.0"
+    "pg": "^7.11.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.4.1",
+    "@testing-library/user-event": "^7.2.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.4.0"
   },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm-run-all --parallel watch:server start:web",
+    "start:web": "react-scripts start",
+    "start:server": "node src/server/server.js",
+    "watch:server": "nodemon --watch src/server src/server",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cioportfolio/node-postgres.git"
+  "eslintConfig": {
+    "extends": "react-app"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/cioportfolio/node-postgres/issues"
-  },
-  "homepage": "https://github.com/cioportfolio/node-postgres#readme"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
