--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,9 @@ services:
       sudo service nginx restart
       && sudo service postgresql restart
       && . ~/dbpass.sh
-      && PORT=3001 pm2 start -n api node -- api/src/server.js
-      && cd app
+      && cd api/src
+      && PORT=3001 pm2 start -n api server.js --watch
+      && cd ../../app
       && PORT=3000 pm2 start -n react npm -- start
       && echo 'Playpen Started'
       && bash"
