Proper docker compose version

--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -1,6 +1,13 @@
 # Default server configuration
 #
+
+upstream api {
+	server api:3000;
+}
+
 server {
+	root /usr/share/nginx/html;
+
 	listen 80 default_server;
 	listen [::]:80 default_server;
 
@@ -19,24 +26,13 @@ server {
 	# Don't use them in a production server!
 	#
 	# include snippets/snakeoil.conf;
-
-	root /vagrant;
-
-	server_name _;
 	
-	location /api/ {
-		proxy_pass http://localhost:3001;
-	}
-
-	location @react {
-		proxy_pass http://localhost:3000;
-	}
-
-	location =/ {
-		try_files /web/www/index.html @react;
+	location /api {
+		rewrite /api/(.*) /$1 break;
+		proxy_pass http://api;
 	}
 
 	location / {
-		try_files /web/www$uri @react;
+		try_files $uri $uri/ =404;
 	}
 }
