--- a/api/package.json
+++ b/api/package.json
@@ -3,8 +3,9 @@
   "version": "1.1.0",
   "private": true,
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
-    "pg": "^7.11.0"
+    "pg": "^8.7.1"
   },
   "scripts": {
     "start": "node server.js"
