--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       dockerfile: Dockerfile
       context: ./app
     ports:
-      - "3000:$APP_PORT"
+      - "$APP_PORT:80"
 
   api:
     build:
@@ -35,4 +35,4 @@ services:
     image: adminer
     restart: always
     ports:
-      - 8080:$ADMIN_PORT
+      - "$ADMIN_PORT:8080"
