Fix setting owner of data folder to postgres

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,12 +1,8 @@
 FROM postgres
 WORKDIR /docker-entrypoint-initdb.d
 COPY ./import ./import.sh
-WORKDIR /
-USER postgres
-RUN mkdir data
-USER ROOT
-WORKDIR /data
-COPY ./data/ ./
+WORKDIR /var
+COPY --chown=postgres ./data/ ./data
 WORKDIR /bin
 COPY ./import ./
 RUN chmod +x import
